--- a/Frontend/PaginaFrontal/css/Products.css
+++ b/Frontend/PaginaFrontal/css/Products.css
@@ -48,7 +48,7 @@
 }
 
 .filter-section-header h3 {
-  font-size: 0.9rem;
+  font-size: 1.5rem;
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -56,8 +56,8 @@
 }
 
 .btn-clear {
-  padding: 4px 10px;
-  font-size: 10px;
+  padding: 8px 60px;
+  font-size: 0.9rem;
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 0.5px;
@@ -99,29 +99,7 @@
   border-color: var(--brutalist-black);
 }
 
-.filter-list input[type="checkbox"] {
-  margin-right: var(--spacing-sm);
-  width: 18px;
-  height: 18px;
-  cursor: pointer;
-  accent-color: var(--brutalist-black);
-}
 
-/* Subcategorias */
-.subcategory-container {
-  display: none;
-  flex-direction: column;
-  gap: 4px;
-  margin-left: var(--spacing-lg);
-  margin-top: 4px;
-  padding-left: var(--spacing-sm);
-  border-left: 2px solid var(--brutalist-gray-light);
-}
-
-.subcategory-filter {
-  font-size: 12px;
-  padding: 4px var(--spacing-sm);
-}
 
 /* Filtros Colapsáveis (Atributos Dinâmicos) */
 .filter-group {
@@ -192,12 +170,47 @@
   background-color: var(--bg-light);
   border-color: var(--brutalist-black);
 }
-
+/* ===== CHECKBOX BRUTALISTA ===== */
+.filter-list input[type="checkbox"],
 .filter-checkbox input[type="checkbox"] {
+  appearance: none;
+  -webkit-appearance: none;
+  width: 18px;
+  height: 18px;
   margin-right: var(--spacing-sm);
-  width: 16px;
-  height: 16px;
+  border: 2px solid var(--brutalist-black);
+  background-color: var(--brutalist-white);
+  cursor: pointer;
+  position: relative;
+  transition: var(--transition-fast);
 }
+
+/* hover brutalista */
+.filter-list input[type="checkbox"]:hover,
+.filter-checkbox input[type="checkbox"]:hover {
+  transform: translate(-2px, -2px);
+  box-shadow: 3px 3px 0 rgba(0,0,0,0.2);
+}
+
+/* checked */
+.filter-list input[type="checkbox"]:checked,
+.filter-checkbox input[type="checkbox"]:checked {
+  background-color: var(--brutalist-black);
+}
+
+/* símbolo check */
+.filter-list input[type="checkbox"]:checked::after,
+.filter-checkbox input[type="checkbox"]:checked::after {
+  content: "✕";
+  position: absolute;
+  top: -2px;
+  left: 3px;
+  color: var(--brutalist-white);
+  font-size: 14px;
+  font-weight: 900;
+}
+
+
 
 /* ==========================================
    TOOLBAR DE PRODUTOS
